# FunctionEncoder

./: .gitignore  README.md  pyproject.toml  setup.py
Examples/: CIFARExample.py  CategoricalExample.py  ConditionalDonutExample.py  DonutExample.py  DonutExample2.py  EuclideanExample.py  ForwardPassExample.py  Gaussian.py  GaussianExample.py  QuadraticExample.py  VanDerPolExample.py  all_experiments.sh  test.py
FunctionEncoder/: __init__.py
FunctionEncoder/Callbacks/: BaseCallback.py  DistanceCallback.py  ListCallback.py  MSECallback.py  NLLCallback.py  TensorboardCallback.py  TestDeterministicPerformanceCallback.py  TestPerformanceCallback.py  TestStochasticPerformanceCallback.py  __init__.py
FunctionEncoder/Dataset/: BaseDataset.py  CIFARDataset.py  CategoricalDataset.py  EuclideanDataset.py  FixedDataset.py  GaussianDataset.py  GaussianDonutDataset.py  GaussianDonutDataset2.py  QuadraticDataset.py  VanDerPolDataset.py  __init__.py
FunctionEncoder/Model/: DeterministicFunctionEncoder.py  ExperimentalFunctionEncoder.py  FunctionEncoder.py  InnerProduct.py  ModelHelpers.py  StochasticFunctionEncoder.py  StochasticFunctionEncoderNew.py  StochasticFunctionEncoderOld.py  __init__.py
FunctionEncoder/Model/Architecture/: BaseArchitecture.py  CNN.py  Euclidean.py  MLP.py  NeuralODE.py  ParallelMLP.py  build.py
