[build-system]
requires = ["setuptools>=61.0", "torch>=2.0", "tqdm", "tensorboard", "numpy<=1.26.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
#where = ["."]  # list of folders that contain the packages (["."] by default)
#include = ["FunctionEncoder"]  # package names should match these glob patterns (["*"] by default)
exclude = ["Examples", "imgs"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "FunctionEncoder"
version = "0.0.3"
authors=[{name="Tyler Ingebrand", email="tyleringebrand@utexas.edu"}]
description = """A package for learning basis functions over arbitrary function sets. This allows even high-dimensional problems to be solved via a minimal number of basis functions. This allows for zero-shot transfer within these spaces, and also a mechanism for fully informative function representation via the coefficients of the basis functions. Hilbert spaces are nifty."""
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/tyler-ingebrand/FunctionEncoder"
