[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["Examples", "imgs"]  # exclude packages matching these glob patterns (empty by default)

[project]
name = "FunctionEncoder"
version = "0.1.0"
authors=[{name="Tyler Ingebrand", email="tyleringebrand@utexas.edu"}]
description = """A package for learning basis functions over arbitrary function sets. This allows even high-dimensional problems to be solved via a minimal number of basis functions. This allows for zero-shot transfer within these spaces, and also a mechanism for fully informative function representation via the coefficients of the basis functions. Hilbert spaces are nifty."""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "tqdm",
    "tensorboard",
    "numpy<=1.26.4"
]

[project.urls]
homepage = "https://github.com/tyler-ingebrand/FunctionEncoder"
